--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,12 +34,23 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  google_fonts: ^2.1.0
+  http: ^0.13.4
+  http_get_cache: ^0.0.2
+  intl: ^0.17.0
+  flutter_modular: ^4.2.0
+  mobx: ^2.0.5
+  cached_network_image: ^3.1.0+1
+  infinite_scroll_pagination: ^3.1.0
+  flutter_mobx: ^2.0.2
+  mobx_codegen: ^2.0.4
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_launcher_icons: ^0.9.2
   flutter_lints: ^1.0.0
+  build_runner: ^2.1.5
 
 flutter_icons:
   android: true
